# SandTablePatternGen

./: .gitignore  CMakeLists.txt  README.md  TASKS_OPTIMIZATION.md  organize_sd.py
docs/: ARCHITECTURE.md
docs/images/: david.thr  taj_mahal.thr
src/: EdgeDetector.cpp  EdgeDetector.h  GifGenerator.cpp  GifGenerator.h  PathPlanner.cpp  PathPlanner.h  ThrGenerator.cpp  ThrGenerator.h  Utils.h  cli.cpp  main.cpp
static/: index.html  script.js  style.css
tests/: test_EdgeDetector.cpp  test_Integration.cpp  test_PathPlanner.cpp  test_ThrGenerator.cpp
